2006-01-10  Andreas Kupries <andreask@activestate.com>

	* mime.tcl: Ensured that all accesses to the variable 'major'
	  operate on a global variable. Fix for [SF Tcllib Bug 1394840],
	  reported by George Orwell <orwellian@users.sourceforge.net>.

2005-11-06  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>

	* mime.tcl (parsedatetime): Add support for timezones with format
	  +NNNN or -NNNN.  Add support for property "clock".
	* mime.test (mime-9.x): Add testing of parsedatetime.=20

2005-11-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mime.tcl: Applied patch by Benjamin Riefenstahl fixing bugs in
	  his patch for [SF Tcllib Bug 1276561], see 2005-10-04 entry.

	  * (MONTHS_SHORT, MONTHS_LONG): Add a dummy entry at index 0. 
	  * (parsedatetime): For month index, use "%m" + scan instead of
	    wrong "%e".

2005-10-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Synchronized version numbers to the 
	* smtp.man:    implementation.

2005-10-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtp.tcl: Use the SASL module for authentication. Checked this
	  against sendmail+cyrussasl and Microsoft SMTPd (for NTLM).

2005-10-04  Andreas Kupries <andreask@activestate.com>

	* mime.tcl: Applied patch for [SF Tcllib Bug 1276561] by Benjamin
	  Riefenstahl. Fixes the handling of date/times, removing
	  dependencies on the current locale.

2005-09-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtp.tcl (::smtp::auth_CRAM-MD5): Fix for bug #1242629 - qmail
	doesn't like a multi-line response.

2005-03-08  Andreas Kupries <andreask@activestate.com>

	* mime.tcl (::mime::copymessageaux): Removed usage of the command
	  'unstack'. Its presence is a bug ever since revision 1.3 (March
	  9, 2000) of mime.tcl, when the converters (base64,